--- a/style.css
+++ b/style.css
@@ -77,11 +77,14 @@ img {
     display: none;
 }
 
-.container {
+.content {
     position: absolute;
     z-index: 1;
 }
 
+.container {
+    padding: 3em 2.5em;
+}
 /* General typography */
 h1 {
     font-family: var(--ff);
@@ -112,7 +115,15 @@ h2 {
     line-height: var(--lh-p-mobile);
 }
 
+/* Header */
 
+
+/* Intro */
+.intro__header {
+    margin-bottom: .6em;
+}
+
+/* App image */
 
 @media (min-width: 600px) {
     /* General styling */
