--- a/style.css
+++ b/style.css
@@ -211,12 +211,6 @@ h2 {
 }
 
 /* Background */
-/* .main__background-img {
-    width: 100%;
-    display: block;
-    position: absolute;
-    margin: -15em 13em;
-} */
 .main__background-img {
     position: absolute;
     z-index: -1000;
@@ -241,6 +235,7 @@ header {
 
 /* Intro */
 .intro {
+    padding-top: 6.4rem;
     padding-bottom: 15em;
 }
 .intro__header {
@@ -248,30 +243,41 @@ header {
 }
 /* App illustration */
 .app-illustration {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--secondary-clr-bk);
-    border-radius: 1em;
+    max-width: 20.9rem;
+    position: absolute;
+    top: -9.8rem;
+    left: 20%;
 }
 .app-illustration__bg-pattern {
-    width: 76%;
+    width: 70%;
 }
 .app-img {
-    width: 56%;
-    display: block;
-    position: absolute;
-    margin: -9em 0em;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.content__wrapper {
+    height: 60rem;
+    margin-top: 16.6rem;
+    margin-bottom: 31rem;
+    background: url(./assets/bg-pattern-2.svg) no-repeat
+        var(--secondary-clr-bk);
+    background-size: auto 70%;
+    background-position: center top;
+    border-radius: 1.2rem;
+    position: relative;
 }
 /* Action card section */
 .action-card {
-    display: block;
+    max-width: 40rem;
     position: absolute;
-    margin: -4em 0;
+    top: 38rem;
+    right: 0;
     background-color: var(--primary-clr-bo);
-    border-radius: 1em;
-    padding: 4em 3.5em;
-    padding: 2.3em 3.5em 4em 3.5em;
+    color: var(--secondary-clr-w);
+    padding: 4.8rem 3.6rem;
+    border-radius: 1.2rem;
 }
 
 .action-card__header {
