--- a/style.css
+++ b/style.css
@@ -182,14 +182,12 @@ h2 {
 
 @media (max-width: 374px) {
     .container {
-      width: 90%;
+      width: 100%;
     }
 }
 @media (min-width: 374px) {
     .container {
       width: 100%;
-      padding-left: 2.4rem;
-      padding-right: 2.4rem;
     }
 }
   @media (min-width: 700px) {
@@ -246,11 +244,9 @@ header {
     max-width: 20.9rem;
     position: absolute;
     top: -9.8rem;
-    left: 20%;
+    left: 11.5%;
 }
-.app-illustration__bg-pattern {
-    width: 70%;
-}
+
 .app-img {
     width: 100%;
     height: 100%;
@@ -321,15 +317,18 @@ header {
     margin-right: .5em;
 }
 /* Footer */
-.footer {
+/* .footer {
+    padding: 8rem 0;
+  }
+.footer-container {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 47em;
-    justify-self: center;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 3rem;
 }
 .footer-logo {
-    margin-bottom: 3em;
+    flex-basis: 100%;
 }
 .footer__email {
     text-decoration: none;
@@ -344,4 +343,42 @@ header {
     width: 30%;
     display: flex;
     justify-content: space-between;
-}
+} */
+.footer {
+    /* padding: 8rem 0; */
+  }
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 30px;
+  }
+  .footer-logo {
+    flex-basis: 100%;
+  }
+  .footer-container span {
+    display: block;
+    max-width: 36.6rem;
+    line-height: 1.625;
+    margin-top: 3.2rem;
+  }
+  .footer-container .email:hover {
+    text-decoration: underline;
+  }
+  .social-links {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    margin-top: 64px;
+  }
+  .footer__social svg path {
+    -webkit-transition: fill 0.3s;
+    -moz-transition: fill 0.3s;
+    -ms-transition: fill 0.3s;
+    -o-transition: fill 0.3s;
+    transition: fill 0.3s;
+  }
+  .footer__social:hover svg path {
+    fill: var(--colors-pink);
+  }
