--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* To-do list
-_ I was up to adjusting the main header and header spacing
-
-*/
-
 /* Reset properties */
 *,
 *::before,
@@ -28,6 +23,7 @@ p {
     --fs-p-desktop: 2.0rem;
     --fs-p-tablet: 1.8rem;
     --fs-p-mobile: 1.6rem;
+    --fs-p2-mobile: 1.8rem;
     --lh-h1-desktop: 8.8rem;                                 /* lh = line height */
     --lh-h1-tablet: 6.4rem;
     --lh-h1-mobile: 4.8rem;
@@ -39,6 +35,7 @@ p {
     --lh-p-mobile: 2.6rem;
     --ls-h1: -1px;                                  /* ls = letter spacing */
     --ff: 'IBM Plex Sans', sans-serif;
+    --fw-l: 300;
     --fw-r: 400;
     --fw-b: 700;
     
@@ -64,14 +61,13 @@ body {
 img {
     max-width: 100%;
 }
-
 .main__top-pattern {
     display: none;
 }
-.content {
-    position: absolute;
+/* .content {
+    position: absolute;     USE THIS once you get to the footer layout       
     z-index: 1;
-}
+} */
 
 .btn {
     display: flex;
@@ -86,7 +82,6 @@ img {
     margin: .4em;
     padding: 1em 0;
 }
-
 /* General typography */
 h1 {
     font-family: var(--ff);
@@ -110,14 +105,14 @@ h2 {
 }
 .p2 {
     font-family: var(--ff);
-    font-size: var(--fs-p-mobile);
-    font-weight: var(--fw-r);
+    font-size: var(--fs-p2-mobile);
+    font-weight: var(--fw-l);
     line-height: var(--lh-p-mobile);
+    letter-spacing: .03rem;
     color: var(--secondary-clr-w);
 }
 
 @media (min-width: 600px) {
-    /* General typography */
     h1 {
         font-family: var(--ff);
         font-size: var(--fs-1-tablet);
@@ -145,8 +140,7 @@ h2 {
     }
 }
 
-@media (min-width: 900px) {
-    /* General typography */
+@media (min-width: 1100px) {
     h1 {
         font-family: var(--ff);
         font-size: var(--fs-1-desktop);
@@ -156,13 +150,13 @@ h2 {
     }
     h2 {
         font-family: var(--ff);
-        font-size: var(--fs-2-desk--fs-1-desktop);
+        font-size: var(--fs-2-desktop);
         font-weight: var(--fw-b);
         line-height: var(--lh-h2-desktop);
     }
     .p1 {
         font-family: var(--ff);
-        font-size: var(--fs-p-desk--fs-1-desktop);
+        font-size: var(--fs-p-desktop);
         font-weight: var(--fw-r);
         line-height: var(--lh-p-desktop);
     }
@@ -174,41 +168,7 @@ h2 {
     }
 }
 
-/* Containers */
-.container {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-@media (max-width: 374px) {
-    .container {
-      width: 100%;
-    }
-}
-@media (min-width: 374px) {
-    .container {
-      width: 100%;
-    }
-}
-  @media (min-width: 700px) {
-    .container {
-      width: 696px;
-      padding-left: 0rem;
-      padding-right: 0rem;
-    }
-}
-  @media (min-width: 992px) {
-    .container {
-      width: 960rem;
-    }
-}
-  @media (min-width: 1200px) {
-    .container {
-      width: 1110rem;
-    }
-}
-
-/* Background */
+/* Background images */
 .main__background-img {
     position: absolute;
     z-index: -1000;
@@ -218,167 +178,109 @@ h2 {
     height: 100%;
     background: url(./assets/bg-main-mobile.png) 2rem -20.5rem no-repeat;
 }
-
-/* Header */
-header {
-    height: 7.2rem;
-    display: flex;
-    align-items: flex-end;
+@media (min-width: 600px) {
+    .main__background-img {
+        position: absolute;
+        z-index: -1000;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(./assets/bg-main-tablet.png) 2rem -20.5rem no-repeat;
+    }
 }
-@media (min-width: 700px) {
-    .header__container {
-      height: 9.4rem;
+@media (min-width: 1100px) {
+    .main__background-img {
+        position: absolute;
+        z-index: -1000;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(./assets/bg-main-desktop.png) 2rem -20.5rem no-repeat;
     }
 }
 
-/* Intro */
-.intro {
-    padding-top: 6.4rem;
-    padding-bottom: 15em;
+/* Containers */
+@media (max-width: 374px) {
+    .container {
+        width: 100%;
+    }
 }
-.intro__header {
-    margin-bottom: .6em;
+@media (min-width: 375px) {
+    .container {
+        width: 87.2%;
+        margin: 0 auto;
+    }
 }
-/* App illustration */
-.app-illustration {
-    max-width: 20.9rem;
-    position: absolute;
-    top: -9.8rem;
-    left: 11.5%;
+@media (min-width: 600px) {
+    .container {
+        width: 90.6%;
+    }
+}
+@media (min-wdith:1100) {
+    .container {
+        width: 77%;
+    }
 }
 
+/* Header */
+.header {
+    padding-top: 3rem;
+}
+
+/* Content/eq section */
+.content {
+    padding-top: 6.4rem;
+}
+.content__wrapper {
+    background: url(assets/bg-pattern-2.svg) no-repeat
+        var(--secondary-clr-bk); /* DON'T use "background-image", just "background"*/
+    background-size: auto 70%;
+    background-position: center top;
+    position: relative;
+    height: 60rem;
+    margin-top: 16.6rem;
+    margin-bottom: 31rem;
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 1.2rem;
+    background-position-x: center;
+    background-position-y: top;
+}
+.app-illustration {
+    max-width: 209px;
+    position: absolute;
+    top: -10.5rem;
+    left: 7%;
+}
 .app-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
-.content__wrapper {
-    height: 60rem;
-    margin-top: 16.6rem;
-    margin-bottom: 31rem;
-    background: url(./assets/bg-pattern-2.svg) no-repeat
-        var(--secondary-clr-bk);
-    background-size: auto 70%;
-    background-position: center top;
-    border-radius: 1.2rem;
-    position: relative;
-}
-/* Action card section */
 .action-card {
-    max-width: 40rem;
-    position: absolute;
-    top: 38rem;
-    right: 0;
     background-color: var(--primary-clr-bo);
-    color: var(--secondary-clr-w);
-    padding: 4.8rem 3.6rem;
+    top: 38rem;
+    position: absolute;
     border-radius: 1.2rem;
+    padding: 4.8rem 3rem;
 }
-
-.action-card__header {
-    margin: .7em 0;
+.action-card__price span {
+    font-family: var(--ff);
+    font-size: 6.5rem;
+    font-weight: var(--fw-b);
+    line-height: 5.2rem;
+    color: var(--secondary-clr-w);
+    margin-right: 1.8rem
 }
-
 .action-card__price {
-    display: flex;
-    align-items: center;
-    color: var(--secondary-clr-w);
     font-family: var(--ff);
-    margin: 1.8em 0;
-}
-
-.action-card p {
-    font-size: var(--fs-p-tablet);
-}
-.action-card span {
-    font-size: var(--fs-1-tablet);
-    line-height: var(--lh-h1-tablet);
-    font-weight: var(--fw-b);
-    margin: 0 1rem;
-}
-.action-card__buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.action-card_ios-btn {
-    background-color: var(--secondary-clr-bk);
+    font-size: 2rem;
+    font-weight: var(--fw-l);
+    line-height: 3.2rem;
     color: var(--secondary-clr-w);
-}
-.action-card_android-btn {
-    background-color: var(--secondary-clr-w);
-    color: var(--secondary-clr-bk);
-}
-.btn-icon {
-    width: 1.2em;
-    height: 1.5em;
-    margin-right: .5em;
-}
-/* Footer */
-/* .footer {
-    padding: 8rem 0;
-  }
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    column-gap: 3rem;
-}
-.footer-logo {
-    flex-basis: 100%;
-}
-.footer__email {
-    text-decoration: none;
-    font-family: var(--ff);
-    font-size: var(--fs-p-mobile);
-    font-weight: var(--fw-b);
-    line-height: 1.5;
-    color: var(--secondary-clr-bk);
-    margin-bottom: 3em;
-}
-.social-links {
-    width: 30%;
-    display: flex;
-    justify-content: space-between;
-} */
-.footer {
-    /* padding: 8rem 0; */
-  }
-  .footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    column-gap: 30px;
-  }
-  .footer-logo {
-    flex-basis: 100%;
-  }
-  .footer-container span {
-    display: block;
-    max-width: 36.6rem;
-    line-height: 1.625;
-    margin-top: 3.2rem;
-  }
-  .footer-container .email:hover {
-    text-decoration: underline;
-  }
-  .social-links {
     display: flex;
     align-items: center;
-    column-gap: 20px;
-    margin-top: 64px;
-  }
-  .footer__social svg path {
-    -webkit-transition: fill 0.3s;
-    -moz-transition: fill 0.3s;
-    -ms-transition: fill 0.3s;
-    -o-transition: fill 0.3s;
-    transition: fill 0.3s;
-  }
-  .footer__social:hover svg path {
-    fill: var(--colors-pink);
-  }
+    margin: 4.8rem 0 0 1rem;
+}
