--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ img {
 .btn {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     font-family: var(--ff);
     font-size: var(--fs-p-tablet);
@@ -108,7 +109,6 @@ h2 {
     font-size: var(--fs-p2-mobile);
     font-weight: var(--fw-l);
     line-height: var(--lh-p-mobile);
-    letter-spacing: .03rem;
     color: var(--secondary-clr-w);
 }
 
@@ -207,12 +207,13 @@ h2 {
         width: 100%;
     }
 }
-@media (min-width: 375px) {
+@media (min-width: 374px) {
     .container {
-        width: 87.2%;
-        margin: 0 auto;
+      width: 100%;
+      padding-left: 2.4rem;
+      padding-right: 2.4rem;
     }
-}
+}  
 @media (min-width: 600px) {
     .container {
         width: 90.6%;
@@ -229,10 +230,14 @@ h2 {
     padding-top: 3rem;
 }
 
-/* Content/eq section */
-.content {
+/* Hero/intro */
+.hero-intro {
     padding-top: 6.4rem;
 }
+.intro__para {
+    margin-top: 2rem;
+}
+/* Content/eq section */
 .content__wrapper {
     background: url(assets/bg-pattern-2.svg) no-repeat
         var(--secondary-clr-bk); /* DON'T use "background-image", just "background"*/
@@ -264,7 +269,7 @@ h2 {
     top: 38rem;
     position: absolute;
     border-radius: 1.2rem;
-    padding: 4.8rem 3rem;
+    padding: 4.8rem 3.5rem;
 }
 .action-card__price span {
     font-family: var(--ff);
@@ -283,4 +288,43 @@ h2 {
     display: flex;
     align-items: center;
     margin: 4.8rem 0 0 1rem;
+}
+.action-card_ios-btn {
+    background-color: var(--secondary-clr-bk);
+    color: var(--secondary-clr-w);
+    margin: 3rem 0 1.6rem 0;
+}
+.action-card_android-btn {
+    background-color: var(--secondary-clr-w);
+    color: var(--secondary-clr-bk);
+    margin: 0;
+}
+.btn-icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: .8rem;
+}
+@media (max-width: 376px) {
+    .content.container {
+      width: 100%;
+      padding: 0;
+    }
+}
+ 
+/* Footer */
+/* I have chosen to make footer__container margin-top the margin that positions the footer. This doesn't need to be the case because you can use the content wrapper. The tablet and desktop versions may influence the final element margin decision */
+.footer__container {
+    margin-top: 38rem;
+    margin-bottom: 20rem;
+    height: 16.4rem;
+    display: flex;
+    flex-direction: column;
+}
+.footer span {
+    font-size: var(--fs-p-mobile);
+}
+.social-links {
+    display: flex;
+    conte: flex-start;
+    list-style: none;
 }
