--- a/style.css
+++ b/style.css
@@ -186,7 +186,8 @@ h2 {
         left: 0;
         width: 100%;
         height: 100%;
-        background: url(./assets/bg-main-tablet.png) 2rem -20.5rem no-repeat;
+        background: url(./assets/bg-pattern-1.svg) 50rem -4.2rem no-repeat, url(./assets/bg-main-tablet.png) -38rem -25.5rem no-repeat;
+        background-size: 266px, auto;
     }
 }
 @media (min-width: 1100px) {
@@ -216,7 +217,8 @@ h2 {
 }  
 @media (min-width: 600px) {
     .container {
-        width: 90.6%;
+        width: 97.6%;
+        margin: 0 auto;
     }
 }
 @media (min-wdith:1100) {
@@ -229,13 +231,27 @@ h2 {
 .header {
     padding-top: 3rem;
 }
-
+@media (min-width: 600px) {
+    .header {
+        padding-top: 6.2rem;
+    }
+}
 /* Hero/intro */
 .hero-intro {
     padding-top: 6.4rem;
 }
 .intro__para {
     margin-top: 2rem;
+}
+
+@media (min-width:600px) {
+    .intro__header {
+        padding-top: 1.5rem;
+        width: 67%;
+    }
+    .intro__para {
+        width: 73%;
+    }
 }
 /* Content/eq section */
 .content__wrapper {
@@ -253,11 +269,21 @@ h2 {
     background-position-x: center;
     background-position-y: top;
 }
+@media (min-width: 600px) {
+    .content__wrapper {
+        margin-top: 26.6rem;
+    }
+}
 .app-illustration {
     max-width: 209px;
     position: absolute;
     top: -10.5rem;
     left: 7%;
+}
+@media (min-width: 600px) {
+    .app-illustration {
+        max-width: 27rem;
+    }
 }
 .app-img {
     width: 100%;
