--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ h2 {
         position: absolute;
         top: 15rem;
         right: 6rem;
+        padding: 4.8rem;
     }
 }
 @media (min-width: 1100px) {
@@ -354,6 +355,11 @@ h2 {
 }
 .action-card__header {
     margin-bottom: 1rem;
+}
+@media (min-width: 1100px) {
+    .action-card__header {
+        margin-bottom: 2rem;
+    }
 }
 .action-card__price span {
     font-family: var(--ff);
@@ -372,6 +378,11 @@ h2 {
     display: flex;
     align-items: center;
     margin: 4rem 0 0 1rem;
+}
+@media (min-width: 1100px) {
+    .action-card__price {
+        margin-bottom: 5rem;
+    }
 }
 .action-card_ios-btn {
     background-color: var(--secondary-clr-bk);
@@ -409,28 +420,56 @@ h2 {
         margin-top: 0;
         margin-bottom: 4rem;
         height: 16.4rem;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+@media (min-width: 1100px) {
+    .footer__container {
+        margin-top: 0;
+        margin-bottom: 4rem;
+        height: 16.4rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+}
+.brand-rights {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 65%;
+}
+@media (min-width: 1100px) {
+    .brand-rights {
+        flex-direction: row;
     }
 }
 .footer span {
     font-family: var(--ff);
     font-size: var(--fs-p-mobile);
     line-height: var(--lh-p-mobile);
+    margin: 2rem 0 3rem 0;
 }
 @media (min-width: 448px) {
     .footer span {
         max-width: 400px;
     }
 }
+@media (min-width: 1100px) {
+    .footer span {
+        margin: 0;
+    }
+}
 .social-links {
     display: flex;
     list-style: none;
     padding-left: 0;
+    margin-top: 9rem;
 }
-@media (min-width: 600px) {
+@media (min-width: 1100px) {
     .social-links {
-        position: absolute;
-        right: 3rem;
-        bottom: 6rem;
+        margin-top: 0;
     }
 }
 .email {
